--- a/index.html
+++ b/index.html
@@ -247,23 +247,32 @@ document.getElementById('close-menu').addEventListener('click', function(event) 
     </div>
     <script>
         async function sendEmail() {
-            const formData = {
-                name: document.getElementById('name').value,
-                email: document.getElementById('email').value,
-                message: document.getElementById('message').value
-            };
+    const formData = {
+        name: document.getElementById('name').value,
+        email: document.getElementById('email').value,
+        message: document.getElementById('message').value
+    };
 
-            const response = await fetch('https://portfolioemailer.netlify.app/.netlify/functions/send_email', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(formData)
-            });
+    try {
+        const response = await fetch('https://portfolioemailer.netlify.app/.netlify/functions/send_email', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(formData)
+        });
 
-            const result = await response.json();
-            alert(result.message);
+        if (!response.ok) {
+            throw new Error(`HTTP error! Status: ${response.status}`);
         }
+
+        const result = await response.json();
+        alert(result.message); // Display success message
+    } catch (error) {
+        console.error('Error sending email:', error.message);
+        alert('Failed to send email. Please try again later.'); // Display error message
+    }
+}
     </script>
    </section>
 
